environments/gloo-edge/rollouts-demo/echo-rollout/base/canary-multi-rt/echo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: echo-rollouts
  namespace: echo
spec:
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - image: hashicorp/http-echo
          args:
            - "-text=version:v1"
            - -listen=:8080
          imagePullPolicy: Always
          name: echo-v1
          ports:
            - containerPort: 8080
  strategy:
    canary:
      canaryService: echo-v2 
      stableService: echo-v1
      trafficRouting:
        plugins:
          solo-io/glooedge:
            routeTable:
              namespace: echo
              labels:
                test-label: label-1
            routes:
              - route-b
      steps:
        - setWeight: 10
        - pause: {duration: 5}
        - setWeight: 25
        - pause: {duration: 5}
        - setWeight: 50
        - pause: {duration: 5}
        - setWeight: 75
        - pause: {duration: 5}
        - setWeight: 100
        - pause: {duration: 5}
