environments/gloo-edge/rollouts-demo/echo-rollout/base/canary-multi-rt/echo-vs-rt.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /a
      delegateAction:
        ref:
          name: echo-routes-a
          namespace: echo
    - matchers:
      - prefix: /b
      delegateAction:
        ref:
          name: echo-routes-b
          namespace: echo
